aligned check boxes and fixed margins and font sizes

--- a/style.css
+++ b/style.css
@@ -77,6 +77,22 @@ form {
   margin: 3.125rem auto 0 auto;
 }
 
+label {
+  display: flex;
+  align-items: center;
+  font-size: 1.25rem;
+  padding: 0.15rem;
+  margin-bottom: 0.5rem;
+}
+
+.input-checkbox {
+  display: inline-block;
+  padding: 0.5rem;
+  margin-right: .5rem;
+  min-height: 1.25rem;
+  min-width: 1.25rem;
+}
+
 .submit-button {
   display: block;
   width: 100%;
